# MOL518-Intro-to-Data-Analysis

./: .gitignore  README.md  pyproject.toml
HW3/: Births.csv  Chicken-Weights.csv  HW3_solutions.ipynb
Homework2/: MOL518_HW2.tex  MOL518_HW2_Godovich.ipynb
Homework2/HW2_data/: ecoli_growth_mean.csv  mystery_summary.csv
Homework2/HW2_data/.ipynb_checkpoints/: SOX2_expression-checkpoint.csv  ecoli_growth_mean-checkpoint.csv  ecoli_growth_replicates-checkpoint.csv  mystery-checkpoint.csv  mystery_summary-checkpoint.csv
Homework_1/: MOL518_HW1.fdb_latexmk  MOL518_HW1.fls  MOL518_HW1.tex  godovich_assignment1_518.ipynb
Imaging Lect1 Example/: BPY518_Lecture1_Digital_Images.ipynb
Imaging Lect1 Example/.ipynb_checkpoints/: BPY518_Lecture1_Digital_Images-checkpoint.ipynb
Lecture 1/: BPY518 Lecture 1.ipynb
Lecture_1/: BPY518_Lecture1.ipynb  MOL518_Lecture1.ipynb
Lecture_10/: MOL518_Lecture10.ipynb
Lecture_13/: MOL518_Lecture13.ipynb
Lecture_13/data/: ecoli_drugs.csv
Lecture_2/: MOL518_Lecture2.ipynb
Lecture_3/: MOL518_Lecture3.ipynb
Lecture_3/data/: Cas13_log2discrimination.csv  woodlice_cell_size.csv
Lecture_31/: BPY518_Lecture1_Digital_Images.slides.html
Lecture_4/: MOL518_Lecture4.ipynb
Lecture_5/: MOL518_Lecture5.ipynb
Lecture_6/: MOL518_Lecture6.ipynb
Lecture_8/: MOL518_Lecture8.ipynb  MOL518_Lecture8_with_answers.ipynb
Precept_1/: MOL518_Precept1.ipynb
Precept_2/: MOL518_Precept2.ipynb
Precept_3/: MOL518_Precept3.ipynb
Precept_3/data/: pssm.csv
src/mol518_intro_to_data_analysis/: __init__.py
(+34 files in other folders)
