[project]
name = "mol518-intro-to-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dgodovich", email = "d.godovich@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[project.scripts]
mol518-intro-to-data-analysis = "mol518_intro_to_data_analysis:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"
